<resources>
    <string name="app_name">PawDopt</string>

    <string name="emailHint">Email</string>
    <string name="passHint">Password</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>

    <string name="loginBtnTxt">Login</string>
    <string name="signUpBtnTxt">Sign Up</string>

    <string name="loginTxt">Already a Member? Sign In!</string>
    <string name="signUpTxt">Not a Member? Register!</string>

    <string name="menuSearchTxt">Search</string>
    <string name="menuFavoriteTxt">Favorites</string>
    <string name="menuAccountTxt">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_favorites_fragment">Hello favorites fragment</string>
    <string name="hello_account_fragment">Hello account fragment</string>

    <string name="distanceTitle">Distance</string>
    <string name="categoryTitle">Category</string>

    <string name="five_mile">&lt; 5 Miles</string>
    <string name="fifty_mile">&lt; 50 Miles</string>
    <string name="hundred_mile">&lt; 100 Miles</string>
    <string name="five_hundred_mile">&lt; 500 Miles</string>

    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="horse">Horse</string>
    <string name="mouse">Mouse</string>
    <string name="rabbit">Rabbit</string>

    <string-array name="distance_array">
        <item>&lt; 5 Miles</item>
        <item>&lt; 50 Miles</item>
        <item>&lt; 100 Miles</item>
        <item>&lt; 500 Miles</item>
    </string-array>

    <string-array name="pettype_array">
        <item>Dog</item>
        <item>Cat</item>
        <item>Mouse</item>
        <item>Rabbit</item>
        <item>Horse</item>
    </string-array>

    <string name="aboutTxt">\u2022 About PawDopt</string>
    <string name="logoutTxt">\u2022 Logout</string>
    <string name="appNameYearTxt">\@ 2019 PawDopt</string>
    <string name="appVersionTxt">v1.0</string>


    <string name="aboutTitleTxt">"Who are we?"</string>
    <string name="aboutParaTxt">One day, I was talking to my wife about donating money to an animal shelter. I ended up thinking, what more I could do as a software engineer to help the shelters and adoption agencies. The idea struck me there itself. An App that helps pets get adopted! PawDopt emerged as an idea but I hope it would turn into a movement someday.\n\n~ Shreyas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
