<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginRight="@dimen/margin8dp"
                android:fontFamily="@font/fredoka_one"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/appPrimaryGreenColor"
                android:textSize="@dimen/txtXLFontSize"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/margin8dp"
                android:layout_gravity="center"
                android:src="@drawable/animal_prints"/>

        </LinearLayout>

        <EditText
            android:id="@+id/firstNameEdit"
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/txtMedFontSize"
            android:layout_height="@dimen/authPagesFieldHt"
            android:layout_marginLeft="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginRight="@dimen/margin8dp"
            android:hint="@string/firstNameHint" />

        <EditText
            android:id="@+id/lastNameEdit"
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/txtMedFontSize"
            android:layout_height="@dimen/authPagesFieldHt"
            android:layout_marginLeft="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginRight="@dimen/margin8dp"
            android:hint="@string/lastNameHint" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/txtMedFontSize"
            android:layout_height="@dimen/authPagesFieldHt"
            android:layout_marginLeft="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginRight="@dimen/margin8dp"
            android:hint="@string/emailHint" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/txtMedFontSize"
            android:layout_height="@dimen/authPagesFieldHt"
            android:layout_marginLeft="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginRight="@dimen/margin8dp"
            android:hint="@string/passHint" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:fontFamily="@font/montserrat"
            android:layout_height="@dimen/authPagesFieldHt"
            android:layout_marginLeft="@dimen/margin8dp"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginRight="@dimen/margin8dp"
            android:textAllCaps="false"
            android:textSize="@dimen/txtMedFontSize"
            android:background="@drawable/rounded_button"
            android:text="@string/signUpBtnTxt"
            android:textColor="@color/appSecondaryWhiteColor" />

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/authPagesTextHt"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/txtSmlFontSize"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin16dp"
            android:text="@string/loginTxt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>