<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.AccountFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:id="@+id/email_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin32dp"
        android:layout_marginTop="@dimen/margin16dp"
        android:src="@drawable/ic_email_100"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailTxt"
        app:layout_constraintTop_toTopOf="@+id/email_image"
        app:layout_constraintBottom_toBottomOf="@+id/email_image"
        app:layout_constraintLeft_toRightOf="@+id/email_image"
        android:layout_marginStart="@dimen/margin16dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/appSecondaryBlackColor"
        android:textSize="@dimen/txtMedFontSize"
        android:text="dummeruser@email.com"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:id="@+id/about_image"
        app:layout_constraintTop_toBottomOf="@+id/email_image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginStart="@dimen/margin32dp"
        android:src="@drawable/ic_about_100"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutTxt"
        android:text="@string/aboutTxt"
        android:textSize="@dimen/txtMedFontSize"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/appSecondaryBlackColor"
        app:layout_constraintTop_toTopOf="@+id/about_image"
        app:layout_constraintBottom_toBottomOf="@+id/about_image"
        app:layout_constraintLeft_toRightOf="@+id/about_image"
        android:layout_marginStart="@dimen/margin16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appNameYearTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/appNameYearTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appVersionTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/appVersionTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>