<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.CategoryFilterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/category_tv"
        android:textColor="@color/appSecondaryGreyColor"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/txtSemiMedFontSize"
        android:text="Filter by Category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin16dp"/>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:justifyContent="center"
        android:layout_margin="@dimen/margin16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_tv">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selection_cat"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginEnd="@dimen/margin24dp"
            android:layout_marginBottom="@dimen/margin16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/thumbnail_cat_256"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cat_tv"
                android:fontFamily="@font/montserrat"
                android:text="@string/cat"
                android:textColor="@color/appSecondaryGreyColor"
                android:layout_gravity="center"
                android:textSize="@dimen/txtSemiMedFontSize" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selection_dog"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginEnd="@dimen/margin24dp"
            android:layout_marginBottom="@dimen/margin16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/thumbnail_dog_256" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dog_tv"
                android:fontFamily="@font/montserrat"
                android:text="@string/dog"
                android:textColor="@color/appSecondaryGreyColor"
                android:layout_gravity="center"
                android:textSize="@dimen/txtSemiMedFontSize" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selection_horse"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginEnd="@dimen/margin24dp"
            android:layout_marginBottom="@dimen/margin16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/thumbnail_horse_256" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horse_tv"
                android:fontFamily="@font/montserrat"
                android:text="@string/horse"
                android:textColor="@color/appSecondaryGreyColor"
                android:layout_gravity="center"
                android:textSize="@dimen/txtSemiMedFontSize" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selection_mouse"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginEnd="@dimen/margin24dp"
            android:layout_marginBottom="@dimen/margin16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/thumbnail_mouse_256" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mouse_tv"
                android:fontFamily="@font/montserrat"
                android:text="@string/mouse"
                android:textColor="@color/appSecondaryGreyColor"
                android:layout_gravity="center"
                android:textSize="@dimen/txtSemiMedFontSize" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selection_rabbit"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginEnd="@dimen/margin24dp"
            android:layout_marginBottom="@dimen/margin16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/thumbnail_rabbit_256" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rabbit_tv"
                android:fontFamily="@font/montserrat"
                android:text="@string/rabbit"
                android:textColor="@color/appSecondaryGreyColor"
                android:layout_gravity="center"
                android:textSize="@dimen/txtSemiMedFontSize" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/clear_categroy_filter"
            app:srcCompat="@drawable/ic_clear_filters_80"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginTop="@dimen/margin32dp"/>

    </com.google.android.flexbox.FlexboxLayout>



</androidx.constraintlayout.widget.ConstraintLayout>